@@ -6,18 +6,17 @@
 
     }
 	  
-\score { 
-\context Voice
-{ \unset Staff.minimumVerticalExtent 
-    \slurDown c4 ( g4  c''4)
 
+\paper { 
+    \context {
+	\Score
+	\override System #'print-function = #box-grob-stencil
+    }
 }
 
-    \paper { 
-	 \context {
-	     \Score
-	     \override System #'print-function = #box-grob-stencil
-	     }
-    }
+\new Voice
+{
+    \unset Staff.minimumVerticalExtent 
+    \slurDown c4 ( g4  c''4)
 }
 
