@@ -668,8 +668,8 @@
 	(Y-offset-callbacks . (,Side_position_interface::aligned_side))
 	(self-alignment-X . 0)
 	(direction . 1)
-	(padding . 1.3)
-	(staff-padding . 1.3)
+	(padding . 0.4)
+	(staff-padding . 0.4)
 	(font-encoding . fetaNumber)
 	(meta . ((interfaces . (side-position-interface multi-measure-interface self-alignment-interface font-interface spanner-interface text-interface))))
 	))
@@ -905,7 +905,7 @@
 	(grace-space-factor . 0.6)
 	(shortest-duration-space . 2.0)
 	(spacing-increment . 1.2)
-	(base-shortest-duration . ,(ly:make-moment 1 8))
+	(base-shortest-duration . ,(ly:make-moment 3 16))
 	(meta . ((interfaces . (spacing-interface spacing-spanner-interface spanner-interface))))
 	))
 
